// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawBoxInnerThinOuterDouble.array.1+2 1`] = `
[
  "╔════════╤════════╗",
  "║Cell 1-1│        ║",
  "╟────────┼────────╢",
  "║Cell 1-2│Cell 2-2║",
  "╚════════╧════════╝",
]
`;

exports[`drawBoxInnerThinOuterDouble.array.2+1+3 1`] = `
[
  "╔═════════════════╤════════════╤═════════════╗",
  "║Cell 1-1         │Cell 2-1 ABC│             ║",
  "╟─────────────────┼────────────┼─────────────╢",
  "║Cell 1-2 Avatar  │            │             ║",
  "╟─────────────────┼────────────┼─────────────╢",
  "║Cell 1-3 Lemmings│Cell 2-3 A  │Cell 3-3 Bata║",
  "╚═════════════════╧════════════╧═════════════╝",
]
`;

exports[`drawBoxInnerThinOuterDouble.array.2x2 1`] = `
[
  "╔════════╤════════╗",
  "║Cell 1-1│Cell 2-1║",
  "╟────────┼────────╢",
  "║Cell 1-2│Cell 2-2║",
  "╚════════╧════════╝",
]
`;

exports[`drawBoxInnerThinOuterDouble.array.single 1`] = `
[
  "╔════════╗",
  "║In array║",
  "╚════════╝",
]
`;
